syntax = "proto3";
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

message PeriodData {
    string name = 1 [json_name="name", (gogoproto.jsontag)="name"];
    map<string, int64> data = 2 [json_name="data", (gogoproto.jsontag)="data"];
}

message Group {
    PeriodData type = 1 [json_name="type", (gogoproto.jsontag)="type"];
    repeated PeriodData subPeriod = 2 [json_name="sub_period", (gogoproto.jsontag)="sub_period"];
    repeated PeriodData friend = 3 [json_name="friend", (gogoproto.jsontag)="friend"];
    repeated PeriodData place = 4 [json_name="place", (gogoproto.jsontag)="place"];
}

message Usage {
    string sectionName = 1 [json_name="section_name", (gogoproto.jsontag)="section_name"];
    double diffFromPrevious = 2 [json_name="diff_from_previous", (gogoproto.jsontag)="diff_from_previous"];
    string period = 3 [json_name="period", (gogoproto.jsontag)="period"];
    int64 periodStartedAt = 4 [json_name="period_started_at", (gogoproto.jsontag)="period_started_at"];
    int64 quantity = 5 [json_name="quantity", (gogoproto.jsontag)="quantity"];
    double value = 6 [json_name="value", (gogoproto.jsontag)="value"];
    Group groups = 7 [json_name="groups", (gogoproto.jsontag)="groups"];
}

message UsageResponse {
    repeated Usage result = 1 [json_name="result", (gogoproto.jsontag)="result"];
}